SED-4875 Optimize storage handling for 0-byte uploads (#25)