@@ -1,7 +1,6 @@
 package step.streaming.server;
 
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.function.ThrowingRunnable;
@@ -14,12 +13,23 @@ import step.streaming.server.test.FailingInputStream;
 import step.streaming.server.test.InMemoryCatalogBackend;
 import step.streaming.server.test.TestingStorageBackend;
 
-import java.io.*;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PipedInputStream;
+import java.io.PipedOutputStream;
+import java.io.PrintWriter;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CopyOnWriteArrayList;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.fail;
 
 public class DefaultStreamingResourceManagerTest {
 
@@ -147,7 +157,7 @@ public class DefaultStreamingResourceManagerTest {
 
         assertFalse("Listener should receive events", listenerEvents.isEmpty());
 
-        StreamingResourceStatus finalStatus = listenerEvents.get(listenerEvents.size() - 1);
+        StreamingResourceStatus finalStatus = listenerEvents.getLast();
         assertEquals(StreamingResourceTransferStatus.FAILED, finalStatus.getTransferStatus());
         // we still expect failed resources to keep their last "successful" size
         assertEquals(30L, finalStatus.getCurrentSize());
@@ -224,7 +234,66 @@ public class DefaultStreamingResourceManagerTest {
         assertEquals(0, storageBackend.getCurrentSize(id));
         File f = storageBackend.getTempDirectory();
         // storage directory should be empty again after deletion of last resource
-        Assert.assertEquals(0, Objects.requireNonNull(f.listFiles()).length);
+        assertEquals(0, Objects.requireNonNull(f.listFiles()).length);
+    }
+
+    @Test
+    public void testSuccessfulZeroByteUploadsAreNotPersisted() throws Exception {
+        assertEquals(0, storageBackend.countFiles());
+        assertEquals(0, catalogBackend.catalog.size());
+        String resource = uploadAndCheckSizeAndLinebreaks("empty.txt", 0, 0);
+        assertEquals(1, catalogBackend.catalog.size());
+        // This is the magic check: we do NOT actually want the backend to have persisted the files, so it should still have 0 files.
+        assertEquals(0, storageBackend.countFiles());
+
+        // but the resource should exist, and we should be able to retrieve the (0-byte) content
+        assertEquals(new StreamingResourceStatus(StreamingResourceTransferStatus.COMPLETED, 0L, 0L), manager.getStatus(resource));
+        try (InputStream is = manager.openStream(resource, 0, 0)) {
+            assertEquals(0, is.available());
+        }
+        assertEquals(0, manager.getLines(resource, 0, 0).size());
+
+        manager.deleteResource(resource);
+        assertThrows(IllegalArgumentException.class, () -> manager.getStatus(resource));
+        assertThrows(IllegalArgumentException.class, () -> manager.getLines(resource, 0, 0).size());
+        assertThrows(IllegalArgumentException.class, () -> manager.openStream(resource, 0, 0));
+    }
+
+    @Test
+    public void testUnsuccessfulZeroByteUploadsAreNotPersisted() throws Exception {
+        assertEquals(0, storageBackend.countFiles());
+        assertEquals(0, catalogBackend.catalog.size());
+        String resourceId = manager.registerNewResource(new StreamingResourceMetadata("test.txt", TEXT_PLAIN, true), null);
+        InputStream data = new ByteArrayInputStream("broken".getBytes());
+        // it doesn't really matter after how many bytes we fail, the entire chunk won't be transferred
+        // because the IO copy works with a 16kB buffer (see InputStream.transferTo), and it fails while filling the buffer
+        InputStream broken = new FailingInputStream(data, 3, false);
+        try {
+            // "happy" (5 bytes) will be written, "broken" won't
+            manager.writeChunk(resourceId, new ByteArrayInputStream("happy".getBytes()), false);
+            manager.writeChunk(resourceId, broken, true);
+            fail("Expected IOException to be thrown");
+        } catch (IOException expected) {
+        }
+        assertEquals(1, catalogBackend.catalog.size());
+        assertEquals(2, storageBackend.countFiles()); // data file + index file = 2 files per indexed text upload
+        assertEquals(new StreamingResourceStatus(StreamingResourceTransferStatus.FAILED, 5L, 1L), manager.getStatus(resourceId));
+        assertEquals(List.of("happy"), manager.getLines(resourceId, 0, 1));
+        // Now, write a new resource that breaks immediately on the first chunk. We expect it to remain at 0 written bytes, and therefore NOT to be saved to a file.
+
+        resourceId = manager.registerNewResource(new StreamingResourceMetadata("test.txt", TEXT_PLAIN, true), null);
+        data = new ByteArrayInputStream("broken".getBytes());
+        broken = new FailingInputStream(data, 3, false);
+        try {
+            manager.writeChunk(resourceId, broken, true);
+            fail("Expected IOException to be thrown");
+        } catch (IOException expected) {
+        }
+        // Catalog contains new entry
+        assertEquals(2, catalogBackend.catalog.size());
+        // But backend still contains 2 files, NOT 4! 0-byte files are optimized away
+        assertEquals(2, storageBackend.countFiles());
+        assertEquals(new StreamingResourceStatus(StreamingResourceTransferStatus.FAILED, 0L, 0L), manager.getStatus(resourceId));
     }
 
     private String uploadAndCheckSizeAndLinebreaks(String fileName, long expectedSize, long expectedNumberOfLines) throws QuotaExceededException, IOException {
